delete API Schedules
