# docs/swagger.json
@@ -28,10 +28,6 @@
     {
       "name": "Passengers",
       "description": "Passengers API Collection"
-    },
-    {
-      "name": "Schedules",
-      "description": "Schedules API Collection"
     }
   ],
   "paths": {
@@ -2538,318 +2534,6 @@
           }
         }
       }
-    },
-    "/api/Schedules/add": {
-      "post": {
-        "tags": ["Schedules"],
-        "security": [
-          {
-            "bearerToken": []
-          }
-        ],
-        "requestBody": {
-          "description": "Add new schedule",
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "dateFlight": {
-                    "type": "string",
-                    "format": "date",
-                    "example": "2022-10-10"
-                  },
-                  "timeDepart": {
-                    "type": "string",
-                    "format": "time",
-                    "example": "12:10"
-                  },
-                  "timeLand": {
-                    "type": "string",
-                    "format": "time",
-                    "example": "12:10"
-                  },
-                  "currentPrice": {
-                    "type": "integer",
-                    "example": "12000000"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "201": {
-            "description": "Success add new schedule",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "Success"
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "success create new schedule"
-                    },
-                    "newSchedule": {
-                      "$ref": "#components/schemas/Schedules"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "failed"
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Invalid Token"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/Schedules/findAll": {
-      "get": {
-        "tags": ["Schedules"],
-        "responses": {
-          "200": {
-            "description": "Success get all schedules",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "Success"
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "success get all schedules"
-                    },
-                    "data": {
-                      "$ref": "#components/schemas/Schedules"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/Schedules/findById/{id}": {
-      "get": {
-        "tags": ["Schedules"],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "schema": {
-              "type": "integer"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Get schedule by id",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "success"
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "success get schedule by id"
-                    },
-                    "data": {
-                      "$ref": "#components/schemas/Schedules"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/Schedules/update/{id}": {
-      "put": {
-        "tags": ["Schedules"],
-        "security": [
-          {
-            "bearerToken": []
-          }
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "Id",
-            "required": true,
-            "description": "id of schedule",
-            "schema": {
-              "type": "integer"
-            }
-          }
-        ],
-        "requestBody": {
-          "description": "Update schedule",
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string",
-                    "example": "Nadir"
-                  },
-                  "age": {
-                    "type": "integer",
-                    "example": 1
-                  },
-                  "NIK": {
-                    "type": "integer",
-                    "example": "77135478901012"
-                  },
-                  "phoneNumber": {
-                    "type": "string",
-                    "maxLength": 13,
-                    "example": "085260940057"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success update schedule by id",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "success"
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Schedule has been update sucessfully"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "failed"
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Invalid Token"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/api/Schedules/delete/{id}": {
-      "delete": {
-        "tags": ["Schedules"],
-        "security": [
-          {
-            "bearerToken": []
-          }
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "id",
-            "required": true,
-            "description": "id of schedule to delete",
-            "schema": {
-              "type": "integer"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Delete schedule",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "success"
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Schedule has been deleted sucessfully"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "status": {
-                      "type": "string",
-                      "example": "failed"
-                    },
-                    "message": {
-                      "type": "string",
-                      "example": "Invalid Token"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "components": {
@@ -3120,44 +2804,6 @@
             "type": "string",
             "format": "date",
             "example": "2022-12-06T17:38:39.125Z"
-          }
-        }
-      },
-      "Schedules": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "example": 1
-          },
-          "dateFlight": {
-            "type": "string",
-            "format": "date",
-            "example": "2022-10-10"
-          },
-          "timeDepart": {
-            "type": "string",
-            "format": "time",
-            "example": "12:10:00"
-          },
-          "timeLand": {
-            "type": "string",
-            "format": "time",
-            "example": "12:10:00"
-          },
-          "currentPrice": {
-            "type": "integer",
-            "example": "12000000"
-          },
-          "updatedAt": {
-            "type": "string",
-            "format": "date",
-            "example": "2022-12-07T02:31:36.786Z"
-          },
-          "createdAt": {
-            "type": "string",
-            "format": "date",
-            "example": "2022-12-07T02:31:36.786Z"
           }
         }
       }
